@@ -1,5 +1,10 @@
 2002-12-04  Yoshinori K. Okuji  <okuji@enbug.org>
 
+	* stage2/stage2.c (print_entry): Put a right arrow, if the entry
+	is longer than 71 characters. Reported by Pavel Roskin.
+
+2002-12-04  Yoshinori K. Okuji  <okuji@enbug.org>
+
 	* stage2/disk_io.c (set_device): If '(n' is given, add 'd' into
 	DEVICE. Reported by Pavel Roskin.
 
